--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "54910bf7-dd6b-4812-b718-10dede19e1bc"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
